@@ -22,6 +22,7 @@
             -XX:+IgnoreUnrecognizedVMOptions
             --add-modules=net.bytebuddy.agent
             --add-opens=org.mule.runtime.extensions.support/org.mule.runtime.module.extension.internal.loader.validation=org.mule.runtime.core
+            --add-exports=org.mule.runtime.extensions.support/org.mule.runtime.module.extension.internal.loader.privileged.extension=org.mule.runtime.core
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.api.processor=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.config=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.config.builders=ALL-UNNAMED
